--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@testing-library/user-event": "^14.5.1",
     "axios": "^1.5.1",
     "chart.js": "^4.4.0",
+    "jsdom": "^22.1.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "vite-jest": "^0.1.4"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
@@ -34,6 +36,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
