--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.5.1",
     "chart.js": "^4.4.0",
     "jsdom": "^22.1.0",
+    "msw": "^2.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-confetti": "^6.1.0",
